<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900"
    android:orientation="vertical"
    tools:context=".ui.characters.CharactersFragment">

    <include
        layout="@layout/layout_search"
        android:id="@+id/layout_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/pink_a100"
        app:layout_constraintStart_toEndOf="@id/layout_search"
        app:layout_constraintTop_toTopOf="@id/layout_search"
        app:layout_constraintBottom_toBottomOf="@id/layout_search"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_950">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_app_bar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/grey_900"
            android:animateLayoutChanges="true"
            app:layout_constraintHeight_percent="0.15"
            style="@style/MaterialCardView.BottomRadius">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/image_logo"
                    android:contentDescription="@string/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.7"
                    app:layout_constraintDimensionRatio="3:1" />

                <ImageButton
                    android:id="@+id/ib_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ImageButton"
                    android:contentDescription="@string/search_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_search"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/pb_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rv_characters"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/mcv_app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pb_more"
            tools:itemCount="5"
            android:paddingTop="@dimen/padding_medium"
            android:paddingHorizontal="@dimen/padding_large"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_character_layout" />

        <ProgressBar
            android:id="@+id/pb_more"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:paddingHorizontal="@dimen/padding_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:itemCount="5"
        android:paddingTop="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_xxxxxxlarge"
        android:visibility="gone"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/padding_large"
        tools:listitem="@layout/item_character_search_layout"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/layout_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
